       * The `-d` alias for `--set-deploy` in the `rebase` and `checkout`
         commands has been changed to `-e` so as not to conflict with the `-d`
         alias for `--db-name`.
       * Added tests for all commands to ensure none of their options conflict
         with core options. Will help prevent conflicts in the future.
     [Removed Features]
     - Removed the core `--deploy-dir`, `--revert-dir`, and `--verify-dir`
       options, which have been deprecated and triggering warnings since
       v0.9993. The `--dir` option to the `init`, `engine`, and `target`
       commands remains the favored interface for specifying script
       directories.
     - Removed the deprecated core `--engine` option. The `init` command still
       supports it, while other commands are able to parse the engine name as
       an argument, e.g., `sqitch deploy mysql`, or implicitly as part of a
       target, as in `sqitch revert db:pg:tryme'.
     - Removed support for reading the `core.$engine` configuration, which has
       been deprecated with warnings since 0.997. The `sqitch engine
       update-config` action remains available to update old configurations.
     [API Changes]
     - Added the URI-overriding parameters `user`, `host`, `port`, and
       `dbname` to App::Sqitch::Target so that command options can be used
       to easily set them.
     - Added support for passing attribute parameters to the `all_targets`
       group constructor on App::Sqitch::Target, so that command-line options
       can be used to assign attributes to all targets read from the
       configuration.
     - Added support for attributes to be passed to the App::Sqitch::Target
       `all_targets` method. Such attributes will be set on all returned
       targets.
     - Aded `target_params` method to App::Sqitch::Command and updated all
       commands to use it when constructing targets. This allows commands to
       easily add options for parameters to be passed to the Target