@@ -9,6 +9,8 @@ use Path::Class;
 use App::Sqitch;
 use lib 't/lib';
 use TestConfig;
+use Test::MockModule;
+use Locale::TextDomain qw(App-Sqitch); # XXX Until deprecation removed below.
 
 my $ROLE;
 
@@ -44,6 +46,12 @@ is_deeply [$CLASS->options], [qw(
     top-dir=s
 )], 'Options should include context options';
 
+
+# Silence warnings.
+my $mock = Test::MockModule->new('App::Sqitch');
+my $warning;
+$mock->mock(warn => sub { $warning = $_[1] });
+
 ##############################################################################
 # Test configure.
 my $opts = {};
@@ -57,11 +65,17 @@ $opts = {
 };
 is_deeply $CLASS->configure($config, $opts), { _cx => [] },
     'Should get no params for empty options';
+is $warning, undef, 'Should have no warning';
 
 $opts = { top_dir => 't' };
 my @params = ( top_dir => dir 't');
 is_deeply $CLASS->configure($config, $opts), { _cx => \@params },
     'Should get top_dir';
+is $warning, __x(
+    "  Option --top-dir is deprecated for {command} and other non-configuration commands.\n  Use --chdir instead.",
+    command => $CLASS->command,
+), 'Should have --top-dir deprecation warning';
+$warning = undef;
 
 $opts = {
     top_dir   => 'lib',
@@ -75,6 +89,10 @@ $opts = {
 is_deeply $CLASS->configure($config, $opts),
     { _cx => \@params, quack => 'woof' },
     'Should collect params';
+is $warning, __x(
+    "  Option --top-dir is deprecated for {command} and other non-configuration commands.\n  Use --chdir instead.",
+    command => $CLASS->command,
+), 'Should have --top-dir deprecation warning again';
 
 ##############################################################################
 # Test target_params.
